--- a/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
+++ b/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="Statement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ClientHelperFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="JsonUtilityFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp">
