--- a/src/C/MyBank/MyBankClient/MyBankClient.vcxproj.filters
+++ b/src/C/MyBank/MyBankClient/MyBankClient.vcxproj.filters
@@ -21,22 +21,16 @@
     <ClCompile Include="MyBankClientStub.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="IMyBankFunctions.cpp">
+    <ClCompile Include="MyBankClientFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MyBankClientConsoleApp.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="IMyBankFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MyBankClientConsoleApp.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyBankClientFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
