--- a/src/C/MyBank/MyBankConsoleClient/MyBankConsoleClient.vcxproj.filters
+++ b/src/C/MyBank/MyBankConsoleClient/MyBankConsoleClient.vcxproj.filters
@@ -15,12 +15,17 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MyBankClientCCOM.cpp">
+    <ClCompile Include="MyBankConsoleClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MyBankClientFunctions.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyBankConsoleClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IMyBankClientFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
