--- a/src/C/MyBank/MyBankConsoleClient/MyBankConsoleClient.vcxproj
+++ b/src/C/MyBank/MyBankConsoleClient/MyBankConsoleClient.vcxproj
@@ -21,23 +21,23 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4b842dbb-0c53-4f90-9034-3a3a101bdc17}</ProjectGuid>
-    <RootNamespace>MyBankClient</RootNamespace>
+    <ProjectGuid>{ae77a6f9-6d2a-4c30-ba7a-35d00c60dad3}</ProjectGuid>
+    <RootNamespace>MyBankConsoleClient</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -88,12 +88,11 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)MyBankIDL\$(Configuration);$(SolutionDir);$(SolutionDir)MyBankConsoleClient;$(SolutionDir)MyBankAcc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)MyBankAcc</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>rpcrt4.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -104,14 +103,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)MyBankIDL\$(Configuration);$(SolutionDir);$(SolutionDir)MyBankConsoleClient;$(SolutionDir)MyBankAcc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)MyBankAcc</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>rpcrt4.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -143,26 +141,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MyBankClientFunctions.cpp" />
-    <ClCompile Include="MyBankClient.cpp" />
-    <ClCompile Include="MyBankClientStub.c" />
+    <ClCompile Include="MyBankConsoleClient.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyBankAcc\MyBankAcc.vcxproj">
-      <Project>{850831ea-41c0-4fd7-9bfe-8c69f3b6f44c}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\MyBankConsoleClient\MyBankConsoleClient.vcxproj">
-      <Project>{ae77a6f9-6d2a-4c30-ba7a-35d00c60dad3}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\MyBankIDL\MyBankIDL.vcxproj">
-      <Project>{d2c2c435-74d0-460a-b776-97ec1bf614ac}</Project>
-    </ProjectReference>
+    <ClInclude Include="IMyBankClientFunctions.h" />
+    <ClInclude Include="MyBankConsoleClient.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyBankClientFunctions.h" />
+    <ProjectReference Include="..\MyBankAcc\MyBankAcc.vcxproj">
+      <Project>{850831ea-41c0-4fd7-9bfe-8c69f3b6f44c}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
